--- a/font-end/src/index.css
+++ b/font-end/src/index.css
@@ -1,10 +1,30 @@
 body {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #f8f6f0;
+}
+
+body {
+  /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 code {
