--- a/font-end/src/css/homePage.css
+++ b/font-end/src/css/homePage.css
@@ -2,3 +2,12 @@
     width: 100%;
     height: 100%;
 }
+
+#carouse-home {
+    width: 100%;
+    height: auto;
+    padding: 0 8%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
