--- a/font-end/src/css/footer.css
+++ b/font-end/src/css/footer.css
@@ -6,7 +6,7 @@
     padding: 2% 0;
     flex-direction: row;
     border-top: 2px solid #949494;
-    margin-top: 2.5rem;
+    /* margin-top: 2.5rem; */
 }
 
 #blk_footer {
@@ -37,7 +37,7 @@
 }
 
 #blk_logo {
-    width: 12.5rem;
+    width: 15rem;
     height: auto;
     display: flex;
     align-items: center;
@@ -45,16 +45,24 @@
 }
 
 #logo-img {
-    width: 100%;
+    width: 80%;
     height: auto;
 }
 
-.text {
-    font-size: 13.5px;
+#blk_footer-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
 }
 
-#blk_img {
-    width: 8rem;
+.text {
+    font-size: 16px;
+
+}
+
+#blk_img-MIT {
+    width: 10rem;
 }
 
 .img-MIT {
@@ -65,7 +73,6 @@
 #blk_footer2 {
     width: 67%;
     height: auto;
-
 }
 
 #footer1 {
@@ -73,26 +80,42 @@
     display: flex;
     flex-direction: row;
     column-gap: 10%;
+    box-sizing: border-box;
 }
 
 #footer-service, #footer-supports, #blk-content {
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
+}
+
+#footer-service {
+    width: 20rem;
+}
+
+#footer-supports {
+    width: 20rem;
 }
 
 .text-title {
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
     padding-bottom: 10px;
     text-transform: uppercase;
 }
 
 .name-service, .name-supports {
-    font-size: 14px;
+    font-size: 17px;
+    color: #000;
+}
+
+.name-service:hover, .name-service:active, .name-supports:hover, .name-supports:active {
+    opacity: .6;
 }
 
 #blk-content {
     row-gap: 10px;
+    margin-right: 15px;
 }
 
 #footer2 {
@@ -103,12 +126,23 @@
     display: flex;
     flex-direction: row;
     column-gap: 5%;
+    margin-top: 5px;
 }
 
 .contact {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     column-gap: 5px;
+}
+
+.contact i {
+    font-size: 18px;
+}
+
+.mail-icon {
+    margin-top: 2%;
 }
 
 .text-contact {
@@ -116,6 +150,6 @@
 }
 
 .text_small-contact {
-    font-size: 12px;
+    font-size: 16px;
 }
 
