--- a/font-end/src/App.css
+++ b/font-end/src/App.css
@@ -3,6 +3,7 @@
 .App {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .App-logo {
@@ -40,9 +41,13 @@
   }
 }
 
-p, a {
-  margin-bottom: 0 !important;
+p {
   text-decoration: none !important;
   margin-bottom: 0!important;
   font-family: "Poppins", sans-serif;
+}
+
+a {
+  color: #000!important;
+  text-decoration: none !important;
 }
