--- a/font-end/src/App.css
+++ b/font-end/src/App.css
@@ -4,6 +4,10 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -50,4 +54,10 @@ p {
 a {
   color: #000!important;
   text-decoration: none !important;
+}
+
+#app-container {
+  /* flex: 1; */
+  /* height: 100vh; */
+  background-color: #f0f0f0;
 }
