--- a/font-end/src/css/cardBookHome.css
+++ b/font-end/src/css/cardBookHome.css
@@ -72,19 +72,15 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin: 5px 0;
+    margin-top: 5px;
 }
 
 .cardHome_blk2-title {
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: #3a3a3a;
     font-weight: 500;
     font-family: "Roboto", serif;
 }
-
-/* #cardHome_blk2-bookshelf {
-    margin-top: 3%;
-} */
 
 #block2_bookshelf {
     display: flex;
@@ -96,12 +92,11 @@
 
 #block2_bookshelf-price {
     color: #c92127;
-    font-size: 1.5rem;
+    font-size: 1.45rem;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
     display: flex;
     align-items: end;
-    
 }
 
 #block2_bookshelf-listPrice {
@@ -136,7 +131,6 @@
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    /* border: 1.5px solid #000; */
     border-radius: 5px;
     cursor: pointer;
 }
@@ -168,5 +162,17 @@
 #blk2_shop-icon2:hover, #blk2_shop-icon2:active {
     color: #fff;
     background-color: #000;
+}
 
+#loadingDataImg, #errorImg {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#loadingDataImg-text, #errorImg-text {
+    font-size: 20px;
 }
