--- a/font-end/src/css/cardNewBook.css
+++ b/font-end/src/css/cardNewBook.css
@@ -1,5 +1,5 @@
 #cardNewBook {
-    max-width: 15rem;
+    width: 15rem;
     height: auto;
     background-color: #fff;
     border-radius: 10px;
@@ -54,7 +54,13 @@
 
 /* Block 2 */
 #cardNewBook_blk2 {
+    height: 8.5rem;
     margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    margin-bottom: 3px;
 }
 
 #cardNewBook_blk2-link {
@@ -67,7 +73,7 @@
 }
 
 .cardNewBook_blk2-title {
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: #141414;
     font-weight: 400;
     font-family: "Roboto", serif;
@@ -79,12 +85,12 @@
 
 #blk2_bookshelf-price {
     display: inline-flex;
-    column-gap: 15px;
+    column-gap: 25px;
 }
 
 #bookshelf_price {
     color: #c92127;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
 }
@@ -92,7 +98,8 @@
 #bookshelf_percents {
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: center;
+    margin-bottom: 3px;
 }
 
 #bookshelf_percents-text {
@@ -105,18 +112,6 @@
     user-select: none;
 }
 
-/* 
-    width: 3rem;
-    height: 2rem;
-    background-color: #c92127;
-    color: #fff;
-    font-size: 0.9rem;
-    border-radius: 5px;
-    font-weight: 500;
-    padding: 3px 7px;
-    text-align: center;
-*/
-
 #bookshelf_percent-text {
     width: 100%;
     height: 100%;
@@ -124,7 +119,7 @@
 
 #blk2_bookshelf-listPrice {
     color: #838383;
-    font-size: 1.2rem;
+    font-size: 1.15rem;
     font-weight: 400;
     text-decoration: line-through!important;
 }
@@ -132,4 +127,17 @@
 .currency-symbol {
     font-size: 18px;
     margin-left: -3px;
+}
+
+#loadingDataNew, #errorImgNew {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#loadingDataImgNew-text, #errorImg-text {
+    font-size: 20px;
 }
