--- a/font-end/src/App.css
+++ b/font-end/src/App.css
@@ -6,8 +6,6 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  position: relative;
-  min-height: 100vh;
 }
 
 .App-logo {
@@ -47,7 +45,7 @@
 
 p {
   text-decoration: none !important;
-  margin-bottom: 0!important;
+  /* margin-bottom: 0!important; */
   font-family: "Poppins", sans-serif;
 }
 
@@ -58,6 +56,7 @@ a {
 
 #app-container {
   /* flex: 1; */
-  /* height: 100vh; */
+  width: 100%;
+  height: 100%;
   background-color: #f0f0f0;
 }
